# lib2opds

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  config.ini-example  pyproject.toml
.github/workflows/: publish-to-pypi.yml
lib2opds/: __main__.py  app.py  config.py  ebooks.py  feeds.py  opds.py  publication.py  publications.py  repositories.py  sidecars.py
lib2opds/formats/: __init__.py  epub.py  m4b.py  pdf.py
lib2opds/templates/: acquisition-feed.html  acquisition-feed.xml  acquisition-feed.xsl  base.html  base.xsl  navigation-feed.html  navigation-feed.xml  navigation-feed.xsl  style.css
man/: lib2opds-sidecar-files.5  lib2opds.1  lib2opds.ini.5
tests/: sidecar.info  test_sidecars.py
