[tool.poetry]
name = "lib2opds"
version = "0.1.0"
description = "Directory based library to OPDS feeds generator"
authors = ["Taras Ivashchenko <oxdef@oxdef.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
defusedxml = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lib2opds = "lib2opds.app:cli"
