[tool.poetry]
name = "lib2opds"
version = "0.1.1"
description = "Directory based library to OPDS feeds generator"
authors = ["Taras Ivashchenko <oxdef@oxdef.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
defusedxml = "^0.7.1"
pillow = "^10.0.1"
pypdf = "^3.17.0"


[tool.poetry.group.dev.dependencies]
types-pillow = "^10.1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lib2opds = "lib2opds.app:cli"

[tool.black]
line-length = 90
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 90

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
