[project]
name = "lib2opds"
dynamic = ["version"]
description = "Static OPDS catalog generator powered by Python"
authors = [
    {name = "Taras Ivashchenko", email = "oxdef@oxdef.info"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["opds", "ebook", "epub"]
requires-python = ">=3.11"
dependencies = [
    "pypdf>=3.4.1,<4.0.0",
    "jinja2>=3.1.2,<4.0.0",
    "defusedxml>=0.7.1",
    "pillow>=9.4.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only"
]

[project.urls]
Homepage = "https://github.com/oxdef/lib2opds"
Documentation = "https://github.com/oxdef/lib2opds/wiki"
Repository = "https://github.com/oxdef/lib2opds.git"
Issues = "https://github.com/oxdef/lib2opds/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "lib2opds/__init__.py"

[project.scripts]
lib2opds = "lib2opds.__main__:cli"

[tool.black]
line-length = 90
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 90

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
